Revert "Fix friday bar alignment and remove mo/dy"
This reverts commit 15db568dfe72c74a83255f4e88ee09c7dec0619d.

--- a/client/src/app/components/activity-tracker/activity-tracker.scss
+++ b/client/src/app/components/activity-tracker/activity-tracker.scss
@@ -393,10 +393,6 @@
       height: 200px;
       position: relative;
       z-index: 100;
-
-      + label {
-        display: inline-block;
-      }
     }
 
     .fill {
